# syslog-ng-incubator

./: configure.ac
modules/: Makefile.am
modules/java/: Makefile.am  MyLogMessage.java  MyStructuredDestination.java
modules/java-parser/: LogParser.h  LogParser.java  LogPipe.java  Makefile.am  SyslogNgClassLoader.java  java-parser-grammar.ym  java-parser-parser.c  java-parser-plugin.c  java-parser.c
modules/java-parser/.deps/: modules_java_parser_libjava_parser_la-java-parser.Plo
modules/java-parser/native/: java-parser-grammar.c  java-parser-grammar.h  java-parser-grammar.y  java-parser-grammar.ym  java-parser-parser.c  java-parser-parser.h  java-parser-plugin.c  java-parser.c  java-parser.h  libjava_parser_la-java-class-loader.lo  libjava_parser_la-java-parser-grammar.lo  libjava_parser_la-java-parser-parser.lo  libjava_parser_la-java-parser-plugin.lo  libjava_parser_la-java-parser.lo  libjava_parser_la-java_machine.lo
modules/java-parser/native/.deps/: libjava_parser_la-java-class-loader.Plo  libjava_parser_la-java-parser-grammar.Plo  libjava_parser_la-java-parser-parser.Plo  libjava_parser_la-java-parser-plugin.Plo  libjava_parser_la-java-parser.Plo  libjava_parser_la-java_machine.Plo
modules/java-parser/proxies/: java-logmsg-proxy.c  java-parser-proxy.c  java-parser-proxy.h  libjava_parser_la-java-parser-proxy.lo
modules/java-parser/proxies/.deps/: libjava_parser_la-java-parser-proxy.Plo
modules/java/proxies/: internal-message-sender-proxy.c  java-logmsg-proxy.c  java-logmsg-proxy.h
